# bsecure

./: .gitignore
backend/webserver/: Cargo.toml
backend/webserver/src/: main.rs
backend/webserver/src/app_state/: state.rs
backend/webserver/src/json_schemas/: user.rs
backend/webserver/src/models/plan/: plan.rs
backend/webserver/src/models/user/: user.rs
backend/webserver/src/repository/: database.rs  elastic_search.rs
backend/webserver/src/routes/: user_routes.rs
backend/webserver/src/services/: pcap_services.rs  user_services.rs
front-end/: .gitignore  package-lock.json  package.json
front-end/pcap_analysis/: package.json
front-end/pcap_analysis/src/components/form/: Button.js  Input.js  Label.js  TextArea.js
front-end/pcap_analysis/src/hooks/: useHttp.jsx
front-end/pcap_analysis/src/views/login/: LoginView.jsx
webserver/repository/: database.rs
webserver/routes/: router.rs  user_routes.rs
webserver/src/models/capture/: capture.rs
webserver/src/models/packet_data/: packet.rs
webserver/src/repository/: database.rs
webserver/src/routes/: router.rs  user_routes.rs
webserver/src/services/: user_services.rs
