[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web     = "4.10.2"
bcrypt        = "0.17.0"
mongodb       = "3.2.2"
serde         = {version = "1.0.219", features = ["derive"]}
elasticsearch = "8.17.0-alpha.1"
tokio         = {version = "1.44.0", features = ["full"]}
dotenv        = "0.15.0"